--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>AI Poems Generator</title>
   </head>
   <body>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/cristinavelo" target="_blank"
+        >Cristina Velo</a
+      >
+      and is
+      <a
+        href="https://github.com/cristinavelo/italian-poems-generator"
+        target="_blank"
+        >open-sourced on GitHub</a
+      >, hosted on
+      <a href="https://italian-poems-generator-cv.netlify.app" target="_blank"
+        >Netlify</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
