--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <title>AI Poems Generator</title>
   </head>
   <body>
+    <header>
+      <h1>AI Italian poem generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        M'illumino
+        <br />
+        d'immenso
+      </div>
+    </main>
     <footer>
       This project was coded by
       <a href="https://github.com/cristinavelo" target="_blank"
