improved the user experience

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </form>
           <div class="example">i.e: Flower, Paris, Cheese</div>
         </div>
-        <div class="poem" id="poem"></div>
+        <div class="poem hidden" id="poem"></div>
       </main>
       <footer>
         This project was coded by
