added some changes to the topic

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
-    <title>AI Poems Generator</title>
+    <title>AI Quotes Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI Italian poem generator</h1>
+        <h1>AI Italian Quotes generator</h1>
       </header>
       <main>
         <div class="form-container">
           <form id="poem-generator-form">
             <input
               type="text"
-              placeholder="Enter the topic of an Italian poem"
+              placeholder="Enter the topic of an Italian quote"
               autofocus
               required
               autocomplete="off"
@@ -33,7 +33,7 @@
             />
             <input type="submit" class="submit" />
           </form>
-          <div class="example">i.e: Flower, Paris, Cheese</div>
+          <div class="example">i.e: Life, Motivation, Power</div>
         </div>
         <div class="poem hidden" id="poem"></div>
       </main>
