--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
       <main>
         <div class="form-container">
-          <form id="poem-generator-form">
+          <form id="quote-generator-form">
             <input
               type="text"
               placeholder="Enter the topic of an Italian quote"
@@ -35,7 +35,7 @@
           </form>
           <div class="example">i.e: Life, Motivation, Power</div>
         </div>
-        <div class="poem hidden" id="poem"></div>
+        <div class="quote hidden" id="quote"></div>
       </main>
       <footer>
         This project was coded by
