--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           target="_blank"
           >open-sourced on GitHub</a
         >, hosted on
-        <a href="https://italian-poems-generator-cv.netlify.app" target="_blank"
+        <a
+          href="https://italian-quotes-generator-cv.netlify.app"
+          target="_blank"
           >Netlify</a
         >
       </footer>
